# badminton

./: .gitignore  CMakeLists.txt  README.md  get_frames.cpp  shuttle_point.cpp
.cache/clangd/index/: shuttle_point.cpp.9DBC51BBAC4A2D54.idx
